# Document-Classifier

./: .gitignore  Dockerfile  Dockerfile.streamlit  README.md  credentials.yaml  docker-compose.yml  pyproject.toml  system_prompt.txt  system_prompt_tr.txt
docs/: rstrcd.txt
docs/en/: conf.txt  top_sc.txt  unc.txt
docs/tr/: conf_tr.txt  rstrcd_tr.txt  top_sc_tr.txt  unc_tr.txt
document_classifier/: api.py  interface.py  userManagerAdmin.py
document_classifier/api/: config.py  main.py  routes.py  utils.py
document_classifier/interface/: app.py
document_classifier/models/: models.py
document_classifier/utils/: file_utils.py  interface_utils.py  translations.py
locales/: en.json  tr.json
prompts/: explain_prompt_en.txt  explain_prompt_tr.txt
